@@ -1,9 +1,4 @@
 {
-  "z start": ["force-segment-header.settings.segment-settings.z-start"],
-  "z end": ["force-segment-header.settings.segment-settings.z-end"],
-  "setpoint [V]": ["force-segment-header.settings.segment-settings.setpoint"],
-  "position x [m]": ["force-segment-header.environment.xy-scanner-position-map.xy-scanner.motorstage.position.x"],
-  "position y [m]": ["force-segment-header.environment.xy-scanner-position-map.xy-scanner.motorstage.position.y"],
   "curve type": ["force-segment-header.settings.style"],
   "position index": [
     "force-scan-map.header.position-index",
@@ -11,5 +6,12 @@
     "quantitative-imaging-map.header.position-index",
     "quantitative-imaging-series.header.position-index"
   ],
-  "time stamp": ["force-segment-header.time-stamp"]
+  "position x [m]": ["force-segment-header.environment.xy-scanner-position-map.xy-scanner.motorstage.position.x"],
+  "position y [m]": ["force-segment-header.environment.xy-scanner-position-map.xy-scanner.motorstage.position.y"],
+  "segment duration": ["force-segment-header.settings.segment-settings.duration"],
+  "segment pause type": ["force-segment-header.settings.segment-settings.type"],
+  "setpoint [V]": ["force-segment-header.settings.segment-settings.setpoint"],
+  "time stamp": ["force-segment-header.time-stamp"],
+  "z end": ["force-segment-header.settings.segment-settings.z-end"],
+  "z start": ["force-segment-header.settings.segment-settings.z-start"]
 }
